# miniflux-bot

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  cliff.toml  pyproject.toml  renovate.json5
.github/workflows/: ci.yml  release.yml
src/miniflux_bot/: __main__.py  action_dispatcher.py  action_worker.py  bot.py  config.py  entry_dispatcher.py  gateway.py  models.py  notifier.py  state.py  telegram.py  telegram_notifier.py
src/miniflux_bot/state/: __init__.py  postgres.py  sqlite.py
