[project]
name = "miniflux-bot"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.29.0",
    "miniflux==1.1.6",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pyrefly==1.1.0",
    "ruff==0.15.17",
    "ty==0.0.50",
]
