[project]
name = "miniflux-bot"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.29.1",
    "aiosqlite==0.22.1",
    "miniflux==1.1.6",
    "psycopg-pool==3.3.1",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pyrefly==1.1.1",
    "ruff==0.15.21",
    "ty==0.0.58",
]
